--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andorra</title>
-    <link rel="icon" href="imagens/flag.png" />
+    <link rel="icon" href="./src/imagens/flag.png" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -28,31 +28,31 @@
             <a href="index.html">Andorra</a>
           </li>
           <li>
-            <a href="paginas/historia.html">História</a>
+            <a href="pages/historia.html">História</a>
           </li>
           <li>
-            <a href="paginas/geografia_montanhas.html">Geografia</a>
+            <a href="pages/geografia_montanhas.html">Geografia</a>
           </li>
           <li>
-            <a href="paginas/cultura.html">Cultura</a>
+            <a href="pages/cultura.html">Cultura</a>
           </li>
           <li>
-            <a href="paginas/economia.html">Economia</a>
+            <a href="pages/economia.html">Economia</a>
           </li>
           <li>
-            <a href="paginas/governo.html">Governo</a>
+            <a href="pages/governo.html">Governo</a>
           </li>
           <li>
-            <a href="paginas/atracoes.html">Atrações</a>
+            <a href="pages/">Atrações</a>
           </li>
         </ul>
       </nav>
     </header>
     <div>
       <div class="slickImgs">
-        <img src="imagens/andorra city1.jpg" alt="" />
-        <img src="imagens/andorra city2.jpg" alt="" />
-        <img src="imagens/andorra city3.jpg" alt="" />
+        <img src="./src/imagens/andorra city1.jpg" alt="" />
+        <img src="./src/imagens/andorra city2.jpg" alt="" />
+        <img src="./src/imagens/andorra city3.jpg" alt="" />
       </div>
       <div class="infoContainer">
         <h1>Andorra</h1>
@@ -71,13 +71,18 @@
       </div>
     </div>
     <footer>
-      <img src="imagens/unasp logo.png" alt="" />
-      <p>Grupo:</p>
-      XDDXDXDXD
-      <p>David, Eduardo, Everton, Gabriel Estrela e Gabriel Porsi</p>
-      <p>Professor:</p>
-      <p>Marcio</p>
-      <p>Trabalho: Criação de um site de Andorra</p>
+      <img src="./src/imagens/unasp logo.png" alt="" class="logo" />
+      <hr />
+      <div class="fotal">
+        <div class="grp">
+          <h2>Grupo:</h2>
+          <p>David, Eduardo, Everton, Gabriel Estrela e Gabriel Porsi</p>
+        </div>
+        <div class="prof">
+          <h2>Professor Marcio</h2>
+          <p>Trabalho: Criação de um site de Andorra</p>
+        </div>
+      </div>
     </footer>
     <script src="script.js"></script>
     <script
