--- a/pages/geografia_montanhas.html
+++ b/pages/geografia_montanhas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andorra</title>
-    <link rel="icon" href="../imagens/flag.png">
+    <link rel="icon" href="../src/imagens/flag.png">
     <link rel="stylesheet" href="geografia_montanhas.css">
     <link rel="stylesheet" href="../style.css">
 <body>
@@ -35,19 +35,19 @@
             </ul>
         </nav>
     </header>
-    <div>
-        <img src="../imagens/andorra montanha.jpg" alt="">
-        <div class="content">
-            <h2 style="color: white;">Explore a Geografia</p>
-            <hr>
-            <h1 style="color: white;">Andorra</h1>
-            <h3 style="color: white;">
+    <main>
+        <img src="../src/imagens/andorra montanha.jpg" alt="">
+        <section class="content">
+            <h2 >Explore a Geografia</p>
+            <h1>Andorra</h1>
+            <h3>
                 Andorra está localizada nos Pirineus Orientais, uma cordilheira montanhosa que separa a França e a Espanha. A sua localização geográfica oferece uma paisagem montanhosa espetacular, com muitas oportunidades para atividades ao ar livre, como esqui e caminhadas.
             </p>
-        </div>
-        <div class="textContainer">
+        </section>
+        <section class="textContainer">
             <p>A geografia de Andorra é dominada por sua localização nos Pirineus, uma cadeia montanhosa que se estende ao longo da fronteira entre a França e a Espanha.</p>
-            <ul>
+            <ul type="none">
+                <div class="str">
                 <li>
                     <p>Localização: Andorra está localizada no sudoeste da Europa, no coração dos Pirineus. É um país sem saída para o mar e está completamente cercado pela França a oeste e norte, e pela Espanha a leste e sul.</p>
                 </li>
@@ -60,6 +60,8 @@
                 <li>
                     <p>Clima: Devido à sua altitude, Andorra tem um clima de montanha com invernos frios e verões suaves. A neve é comum durante o inverno nas regiões mais elevadas, o que torna o país um destino popular para esquiadores e praticantes de snowboard.</p>
                 </li>
+            </div>
+            <div class="prt">
                 <li>
                     <p>Vegetação: A vegetação varia de acordo com a altitude. Nas altas montanhas, você encontrará prados alpinos e florestas de coníferas. Nas regiões mais baixas, existem florestas de folhas caducas, como carvalhos e pinheiros.</p>
                 </li>
@@ -72,17 +74,24 @@
                 <li>
                     <p>Localização Estratégica: Devido à sua localização entre a França e a Espanha, Andorra historicamente desempenhou um papel estratégico nas rotas comerciais entre esses dois países. Atualmente, também é conhecida por seu turismo e comércio, incluindo lojas duty-free.</p>
                 </li>
+            </div>
             </ul>
-            <p>A geografia única de Andorra, com suas majestosas montanhas e paisagens deslumbrantes, desempenha um papel fundamental na atração de visitantes que buscam experiências ao ar livre e esportes de inverno em meio à beleza natural dos Pirineus.</p>
-        </div>
-    </div>
+            <p class="last">A geografia única de Andorra, com suas majestosas montanhas e paisagens deslumbrantes, desempenha um papel fundamental na atração de visitantes que buscam experiências ao ar livre e esportes de inverno em meio à beleza natural dos Pirineus.</p>
+        </section>
+    </main>
     <footer>
-        <img src="../imagens/unasp logo.png" alt="">
-        <p>Grupo:</p>
-        <p>David, Eduardo, Everton, Gabriel Estrela e Gabriel Porsi</p>
-        <p>Professor:</p>
-        <p>Marcio</p>
-        <p>Trabalho: Criação de um site de Andorra</p>
-    </footer>
+        <img src="../src/imagens/unasp logo.png" alt="" class="logo" />
+        <hr />
+        <div class="fotal">
+          <div class="grp">
+            <h2>Grupo:</h2>
+            <p>David, Eduardo, Everton, Gabriel Estrela e Gabriel Porsi</p>
+          </div>
+          <div class="prof">
+            <h2>Professor Marcio</h2>
+            <p>Trabalho: Criação de um site de Andorra</p>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
