--- a/pages/historia.html
+++ b/pages/historia.html
@@ -40,32 +40,15 @@
         <h1>História de Andorra</h1>
         <hr>
         <h2>A história de Andorra é rica e fascinante, marcada por uma mistura de influências devido à sua localização estratégica nos Pirineus entre a França e a Espanha.</h2>
-        <ul type="none">
-            <li>
-                <div class="imgContainer">
-                    <img src="../imagens/old flag.png" alt="">
-                </div>
-                <p>Fundação: Acredita-se que Andorra tenha sido estabelecida como um território independente no final do século VIII ou início do século IX, durante o governo de Carlos Magno, o imperador franco. Segundo a lenda, Carlos Magno teria concedido o território de Andorra aos habitantes locais como recompensa por sua ajuda na defesa contra os mouros.</p>
-            </li>
-            <li>
-                <div class="imgContainer">
-                    <img src="../imagens/flag spain and franch.jpg" alt="">
-                </div>
-                <p>Domínio Conjunto: Desde então, Andorra tem sido um co-principado, com dois governantes: o Bispo de Urgel, na Espanha, e o Conde de Foix, na França. Esse sistema de governo conjunto é uma característica única da história de Andorra. No entanto, em 1993, o tratado de Bayonne concedeu poderes ao Bispo de Urgel e ao Presidente da República Francesa sobre questões internas do país.</p>
-            </li>
-            <li>
-                <div class="imgContainer">
-                    <img src="../imagens/flag.png" alt="">
-                </div>
-                <p>Século XX: No século XX, Andorra começou a se modernizar e abrir-se ao mundo. Em 1958, uma nova Constituição foi promulgada, estabelecendo o Principado de Andorra como uma democracia parlamentar.</p>
-            </li>
-            <li>
-                <div class="imgContainer">
-                    <img src="../imagens/andorra img.jpg" alt="">
-                </div>
-                <p>Século XXI: Nos anos 2000, Andorra passou por uma série de reformas legais e financeiras para se tornar mais transparente em questões financeiras e fiscais, atraindo investidores estrangeiros.</p>
-            </li>
-        </ul>
+        <div>
+            <p>
+                A história de Andorra, um micro-estado europeu localizado nos Pirenéus, ligado à nação catalã, mas que conseguiu manter certa autonomia até a independência de 1994. Andorra sempre teve dificuldades com a Espanha e França, que não respeitaram sempre a sua independência.
+    O principado de Andorra foi durante séculos um território essencialmente agrícola e de pastorícia, onde a prática da caça era frequente. Segundo algumas lendas, Carlos Magno teria sido o fundador de Andorra. No entanto, Andorra foi povoada desde a Pré-história e o antigo povo dos "Andosins" é mencionado em escritos da Antiguidade. A independência de Andorra é reconhecida de facto pela primeira vez na época carolíngia quando forma um semi-Estado da Marca de Espanha para proteger o império das invasões árabes.
+            </p>
+            <p>
+                Andorra é um país de 77 mil habitantes da Europa Meridional, localizado na cordilheira dos Pirineus entre a França e a Espanha. Esses dois países compartilham o Poder Executivo do território andorrano, cujo sistema de governo é o coprincipado parlamentarista.
+            </p>
+        </div>
     </div>
     <footer>
         <img src="../imagens/unasp logo.png" alt="">
@@ -77,3 +60,4 @@
     </footer>
 </body>
 </html>
+
