--- a/pages/atracoes.html
+++ b/pages/atracoes.html
@@ -61,7 +61,38 @@
             </div>
         </div>
         <ul type="none">
-            
+            <li>
+                <img src="../src/imagens/La_Vella.jpg" alt="">
+                <p>Andorra La Vella</p>
+            </li>
+            <li>
+                <img src="../src/imagens/spar.jpg" alt="">
+                <p>Spars de Águas Termais</p>
+            </li>
+            <li>
+                <img src="../src/imagens/canillo.jpg" alt="">
+                <p>Canillo</p>
+            </li>
+            <li>
+                <img src="../src/imagens/Soldeu.jpg" alt="">
+                <p>Soldeu</p>
+            </li>
+            <li>
+                <img src="../src/imagens/Encamp.jpg" alt="">
+                <p>Encamp</p>
+            </li>
+            <li>
+                <img src="../src/imagens/mirante.jpg" alt="">
+                <p>Mirantes</p>
+            </li>
+            <li>
+                <img src="../src/imagens/igreja.jpg" alt="">
+                <p>Igrejas Românticas</p>
+            </li>
+            <li>
+                <img src="../src/imagens/atividadeNeve.jpg" alt="">
+                <p>Atividades na Neve</p>
+            </li>
         </ul>
     </div>
     <footer>
