--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <img src="./src/imagens/andorra city3.jpg" alt="" />
       </div>
       <div class="infoContainer">
-        <h1>Andorr</h1>
+        <h1>Andorra</h1>
         <div class="info">
           <div>
             <i></i>
