--- a/pages/geografia_montanhas.html
+++ b/pages/geografia_montanhas.html
@@ -38,14 +38,13 @@
     <main>
         <img src="../src/imagens/andorra montanha.jpg" alt="">
         <section class="content">
-            <h2 >Explore a Geografia</p>
+            <h2>Explore a Geografia</h2>
             <h1>Andorra</h1>
-            <h3>
+            <p>
                 Andorra está localizada nos Pirineus Orientais, uma cordilheira montanhosa que separa a França e a Espanha. A sua localização geográfica oferece uma paisagem montanhosa espetacular, com muitas oportunidades para atividades ao ar livre, como esqui e caminhadas.
             </p>
         </section>
         <section class="textContainer">
-            <p>A geografia de Andorra é dominada por sua localização nos Pirineus, uma cadeia montanhosa que se estende ao longo da fronteira entre a França e a Espanha.</p>
             <ul type="none">
                 <div class="str">
                 <li>
@@ -76,7 +75,6 @@
                 </li>
             </div>
             </ul>
-            <p class="last">A geografia única de Andorra, com suas majestosas montanhas e paisagens deslumbrantes, desempenha um papel fundamental na atração de visitantes que buscam experiências ao ar livre e esportes de inverno em meio à beleza natural dos Pirineus.</p>
         </section>
     </main>
     <footer>
