--- a/pages/historia.html
+++ b/pages/historia.html
@@ -1,63 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andorra</title>
-    <link rel="icon" href="../imagens/flag.png">
-    <link rel="stylesheet" href="historia.css">
-    <link rel="stylesheet" href="../style.css">
-</head>
-<body>
+    <link rel="icon" href="../src/imagens/flag.png" />
+    <link rel="stylesheet" href="historia.css" />
+    <link rel="stylesheet" href="../style.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul type="none">
-                <li>
-                    <a href="../index.html">Andorra</a>
-                </li>
-                <li>
-                    <a href="historia.html">História</a>
-                </li>
-                <li>
-                    <a href="geografia_montanhas.html">Geografia</a>
-                </li>
-                <li>
-                    <a href="cultura.html">Cultura</a>
-                </li>
-                <li>
-                    <a href="economia.html">Economia</a>
-                </li>
-                <li>
-                    <a href="governo.html">Governo</a>
-                </li>
-                <li>
-                    <a href="atracoes.html">Atrações</a>
-                </li>
-            </ul>
-        </nav>
+      <nav>
+        <ul type="none">
+          <li>
+            <a href="../index.html">Andorra</a>
+          </li>
+          <li>
+            <a href="historia.html">História</a>
+          </li>
+          <li>
+            <a href="geografia_montanhas.html">Geografia</a>
+          </li>
+          <li>
+            <a href="cultura.html">Cultura</a>
+          </li>
+          <li>
+            <a href="economia.html">Economia</a>
+          </li>
+          <li>
+            <a href="governo.html">Governo</a>
+          </li>
+          <li>
+            <a href="atracoes.html">Atrações</a>
+          </li>
+        </ul>
+      </nav>
     </header>
-    <div class="textContainer">
-        <h1>História de Andorra</h1>
-        <hr>
-        <h2>A história de Andorra é rica e fascinante, marcada por uma mistura de influências devido à sua localização estratégica nos Pirineus entre a França e a Espanha.</h2>
-        <div>
-            <p>
-                A história de Andorra, um micro-estado europeu localizado nos Pirenéus, ligado à nação catalã, mas que conseguiu manter certa autonomia até a independência de 1994. Andorra sempre teve dificuldades com a Espanha e França, que não respeitaram sempre a sua independência.
-    O principado de Andorra foi durante séculos um território essencialmente agrícola e de pastorícia, onde a prática da caça era frequente. Segundo algumas lendas, Carlos Magno teria sido o fundador de Andorra. No entanto, Andorra foi povoada desde a Pré-história e o antigo povo dos "Andosins" é mencionado em escritos da Antiguidade. A independência de Andorra é reconhecida de facto pela primeira vez na época carolíngia quando forma um semi-Estado da Marca de Espanha para proteger o império das invasões árabes.
-            </p>
-            <p>
-                Andorra é um país de 77 mil habitantes da Europa Meridional, localizado na cordilheira dos Pirineus entre a França e a Espanha. Esses dois países compartilham o Poder Executivo do território andorrano, cujo sistema de governo é o coprincipado parlamentarista.
-            </p>
-        </div>
-    </div>
+    <main class="textContainer">
+      <img src="../src/imagens/bandeira_hist.jpg" alt="" class="bandeira" />
+      <h1 class="infoContainer cl">História de Andorra</h1>
+      <h2>
+        A história de Andorra é rica e fascinante, marcada por uma mistura de
+        influências devido à sua localização estratégica nos Pirineus entre a
+        França e a Espanha<span>.</span>
+      </h2>
+      <div class="killxd">
+        <p>
+          A história de Andorra, um micro-estado europeu localizado nos
+          Pirenéus, ligado à nação catalã, mas que conseguiu manter certa
+          autonomia até a independência de 1994. Andorra sempre teve
+          dificuldades com a Espanha e França, que não respeitaram sempre a sua
+          independência. O principado de Andorra foi durante séculos um
+          território essencialmente agrícola e de pastorícia, onde a prática da
+          caça era frequente. Segundo algumas lendas, Carlos Magno teria sido o
+          fundador de Andorra. No entanto, Andorra foi povoada desde a
+          Pré-história e o antigo povo dos "Andosins" é mencionado em escritos
+          da Antiguidade. A independência de Andorra é reconhecida de facto pela
+          primeira vez na época carolíngia quando forma um semi-Estado da Marca
+          de Espanha para proteger o império das invasões árabes.
+        </p>
+        <p>
+          Andorra é um país de 77 mil habitantes da Europa Meridional,
+          localizado na cordilheira dos Pirineus entre a França e a Espanha.
+          Esses dois países compartilham o Poder Executivo do território
+          andorrano, cujo sistema de governo é o coprincipado parlamentarista.
+        </p>
+      </div>
+    </main>
     <footer>
-        <img src="../imagens/unasp logo.png" alt="">
-        <p>Grupo:</p>
-        <p>David, Eduardo, Everton, Gabriel Estrela e Gabriel Porsi</p>
-        <p>Professor:</p>
-        <p>Marcio</p>
-        <p>Trabalho: Criação de um site de Andorra</p>
+      <img src="../src/imagens/unasp logo.png" alt="" class="logo" />
+      <hr />
+      <div class="fotal">
+        <div class="grp">
+          <h2>Grupo:</h2>
+          <p>David, Eduardo, Everton, Gabriel Estrela e Gabriel Porsi</p>
+        </div>
+        <div class="prof">
+          <h2>Professor Marcio</h2>
+          <p>Trabalho: Criação de um site de Andorra</p>
+        </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
-
