--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="pages/governo.html">Governo</a>
           </li>
           <li>
-            <a href="pages/">Atrações</a>
+            <a href="pages/atracoes.html">Atrações</a>
           </li>
         </ul>
       </nav>
