--- a/pages/atracoes.html
+++ b/pages/atracoes.html
@@ -47,20 +47,22 @@
     </header>
     <div class="container">
         <div class="content">
-            <h1>ATRAÇÕES</h1>
-            <hr>
-            <div class="slickImgs">
-                <img src="../src/imagens/La Vella.jpg" alt="">
-                <img src="../src/imagens/spar.jpg" alt="">
-                <img src="../src/imagens/mirante.jpg" alt="">
-                <img src="../src/imagens/igreja.jpg" alt="">
-                <img src="../src/imagens/hotel.jpg" alt="">
+            <div class="titulo">
+                <h1>ATRAÇÕES</h1>
+                <hr>
             </div>
-            <div class="nada"></div>
-            <div>
+            <div class="containerImg">
+                <div class="nada"></div>
+                <div class="slickImgs">
+                    <img src="../src/imagens/La_Vella.jpg" alt="">
+                    <img src="../src/imagens/spar.jpg" alt="">
+                    <img src="../src/imagens/mirante.jpg" alt="">
+                    <img src="../src/imagens/igreja.png" alt="">
+                    <img src="../src/imagens/hotel.jpg" alt="">
+                </div>
             </div>
         </div>
-        <ul type="none">
+        <ul type="none" class="galleryContainer">
             <li>
                 <img src="../src/imagens/La_Vella.jpg" alt="">
                 <p>Andorra La Vella</p>
@@ -86,7 +88,7 @@
                 <p>Mirantes</p>
             </li>
             <li>
-                <img src="../src/imagens/igreja.jpg" alt="">
+                <img src="../src/imagens/igreja.png" alt="">
                 <p>Igrejas Românticas</p>
             </li>
             <li>
