--- a/pages/cultura.html
+++ b/pages/cultura.html
@@ -1,74 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andorra</title>
-    <link rel="icon" href="../imagens/flag.png">
-    <link rel="stylesheet" href="cultura.css">
-    <link rel="stylesheet" href="../style.css">
-</head>
-<body>
+    <link rel="icon" href="../src/imagens/flag.png" />
+    <link rel="stylesheet" href="cultura.css" />
+    <link rel="stylesheet" href="../style.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul type="none">
-                <li>
-                    <a href="../index.html">Andorra</a>
-                </li>
-                <li>
-                    <a href="historia.html">História</a>
-                </li>
-                <li>
-                    <a href="geografia_montanhas.html">Geografia</a>
-                </li>
-                <li>
-                    <a href="cultura.html">Cultura</a>
-                </li>
-                <li>
-                    <a href="economia.html">Economia</a>
-                </li>
-                <li>
-                    <a href="governo.html">Governo</a>
-                </li>
-                <li>
-                    <a href="atracoes.html">Atrações</a>
-                </li>
-            </ul>
-        </nav>
+      <nav>
+        <ul type="none">
+          <li>
+            <a href="../index.html">Andorra</a>
+          </li>
+          <li>
+            <a href="historia.html">História</a>
+          </li>
+          <li>
+            <a href="geografia_montanhas.html">Geografia</a>
+          </li>
+          <li>
+            <a href="cultura.html">Cultura</a>
+          </li>
+          <li>
+            <a href="economia.html">Economia</a>
+          </li>
+          <li>
+            <a href="governo.html">Governo</a>
+          </li>
+          <li>
+            <a href="atracoes.html">Atrações</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <div class="container">
-        <div>
-            <img src="../imagens/cultury andorra.jpg" alt="">
-            <div class="content">
-                <h1>CULTURA</h1>
-                <hr>
-            </div>
+      <div>
+        <img src="../src/imagens/cultury andorra.jpg" alt="" />
+        <div class="content">
+          <h1>CULTURA</h1>
         </div>
-        <div class="textContainer">
-            <p>
-                A cultura de Andorra tem suas raízes na tradição catalã, uma vez que a população do país é de origem catalã. A cultura do Principado de Andorra é moldada por influências provenientes tanto da França quanto da Espanha, embora se destaquem predominantemente as manifestações culturais de origem catalã. Além disso, o calendário festivo do país é caracterizado por celebrações de cunho religioso, principalmente de orientação católica.
-            </p>
-            <p>
-                Uma das celebrações de maior destaque é a Festa Nacional de Andorra, que ocorre em 8 de setembro, no santuário da Virgem de Merixtell, considerada a santa padroeira do país.
-            </p>
-            <p>
-                Quanto à língua oficial de Andorra, o idioma oficial é o catalão. No entanto, o espanhol e o francês também são amplamente falados em todo o território.
-            </p>
-        </div>
+      </div>
+      <div class="textContainer">
+        <p>
+          A cultura de Andorra tem suas raízes na tradição catalã, uma vez que a
+          população do país é de origem catalã. A cultura do Principado de
+          Andorra é moldada por influências provenientes tanto da França quanto
+          da Espanha, embora se destaquem predominantemente as manifestações
+          culturais de origem catalã. Além disso, o calendário festivo do país é
+          caracterizado por celebrações de cunho religioso, principalmente de
+          orientação católica.
+        </p>
+        <p>
+          Uma das celebrações de maior destaque é a Festa Nacional de Andorra,
+          que ocorre em 8 de setembro, no santuário da Virgem de Merixtell,
+          considerada a santa padroeira do país.
+        </p>
+        <p>
+          Quanto à língua oficial de Andorra, o idioma oficial é o catalão. No
+          entanto, o espanhol e o francês também são amplamente falados em todo
+          o território.
+        </p>
+      </div>
     </div>
     <footer>
-        <img src="../src/imagens/unasp logo.png" alt="" class="logo" />
-        <hr />
-        <div class="fotal">
-          <div class="grp">
-            <h2>Grupo:</h2>
-            <p>David, Eduardo, Everton, Gabriel Estrela e Gabriel Porsi</p>
-          </div>
-          <div class="prof">
-            <h2>Professor Marcio</h2>
-            <p>Trabalho: Criação de um site de Andorra</p>
-          </div>
+      <img src="../src/imagens/unasp logo.png" alt="" class="logo" />
+      <hr />
+      <div class="fotal">
+        <div class="grp">
+          <h2>Grupo:</h2>
+          <p>David, Eduardo, Everton, Gabriel Estrela e Gabriel Porsi</p>
         </div>
-      </footer>
-</body>
+        <div class="prof">
+          <h2>Professor Marcio</h2>
+          <p>Trabalho: Criação de um site de Andorra</p>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
