--- a/index.html
+++ b/index.html
@@ -58,14 +58,18 @@
         <h1>Andorra</h1>
         <div class="info">
           <div>
-            <i></i>
-            <p>População:</p>
-            <p>80 M</p>
+            <img src="./src/imagens/perfilIcon.png" alt="">
+            <div>
+              <p>População:</p>
+              <p>80 M</p>
+            </div>
           </div>
           <div>
-            <i></i>
-            <p>Território:</p>
-            <p>468 KM²</p>
+            <img src="src/imagens/globoIcon.png" alt="">
+            <div>
+              <p>Território:</p>
+              <p>468 KM²</p>
+            </div>
           </div>
         </div>
       </div>
