--- a/pages/atracoes.html
+++ b/pages/atracoes.html
@@ -57,8 +57,8 @@
                     <img src="../src/imagens/La_Vella.jpg" alt="">
                     <img src="../src/imagens/spar.jpg" alt="">
                     <img src="../src/imagens/mirante.jpg" alt="">
-                    <img src="../src/imagens/igreja.png" alt="">
-                    <img src="../src/imagens/hotel.jpg" alt="">
+                    <img src="../src/imagens/canillo.jpg" alt="">
+                    <img src="../src/imagens/Soldeu.jpg" alt="">
                 </div>
             </div>
         </div>
