--- a/pages/atracoes.html
+++ b/pages/atracoes.html
@@ -22,7 +22,7 @@
       <nav>
         <ul type="none">
           <li>
-            <a href="../index.html">Andorra</a>
+            <a href="../index.html">Andorra XD</a>
           </li>
           <li>
             <a href="historia.html">História</a>
@@ -46,56 +46,55 @@
       </nav>
     </header>
     <div class="container">
-        <div class="content">
-            <div class="titulo">
-                <h1>ATRAÇÕES</h1>
-                <hr>
-            </div>
-            <div class="containerImg">
-                <div class="nada"></div>
-                <div class="slickImgs">
-                    <img src="../src/imagens/La_Vella.jpg" alt="">
-                    <img src="../src/imagens/spar.jpg" alt="">
-                    <img src="../src/imagens/mirante.jpg" alt="">
-                    <img src="../src/imagens/canillo.jpg" alt="">
-                    <img src="../src/imagens/Soldeu.jpg" alt="">
-                </div>
-            </div>
+      <div class="content">
+        <div class="titulo">
+          <h1>ATRAÇÕES</h1>
         </div>
-        <ul type="none" class="galleryContainer">
-            <li>
-                <img src="../src/imagens/La_Vella.jpg" alt="">
-                <p>Andorra La Vella</p>
-            </li>
-            <li>
-                <img src="../src/imagens/spar.jpg" alt="">
-                <p>Spars de Águas Termais</p>
-            </li>
-            <li>
-                <img src="../src/imagens/canillo.jpg" alt="">
-                <p>Canillo</p>
-            </li>
-            <li>
-                <img src="../src/imagens/Soldeu.jpg" alt="">
-                <p>Soldeu</p>
-            </li>
-            <li>
-                <img src="../src/imagens/Encamp.jpg" alt="">
-                <p>Encamp</p>
-            </li>
-            <li>
-                <img src="../src/imagens/mirante.jpg" alt="">
-                <p>Mirantes</p>
-            </li>
-            <li>
-                <img src="../src/imagens/igreja.png" alt="">
-                <p>Igrejas Românticas</p>
-            </li>
-            <li>
-                <img src="../src/imagens/atividadeNeve.jpg" alt="">
-                <p>Atividades na Neve</p>
-            </li>
-        </ul>
+        <div class="containerImg">
+          <div class="nada"></div>
+          <div class="slickImgs">
+            <img src="../src/imagens/La_Vella.jpg" alt="" />
+            <img src="../src/imagens/spar.jpg" alt="" />
+            <img src="../src/imagens/mirante.jpg" alt="" />
+            <img src="../src/imagens/canillo.jpg" alt="" />
+            <img src="../src/imagens/Soldeu.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+      <ul type="none" class="galleryContainer">
+        <li>
+          <img src="../src/imagens/La_Vella.jpg" alt="" />
+          <p>Andorra La Vella</p>
+        </li>
+        <li>
+          <img src="../src/imagens/spar.jpg" alt="" />
+          <p>Spars de Águas Termais</p>
+        </li>
+        <li>
+          <img src="../src/imagens/canillo.jpg" alt="" />
+          <p>Canillo</p>
+        </li>
+        <li>
+          <img src="../src/imagens/Soldeu.jpg" alt="" />
+          <p>Soldeu</p>
+        </li>
+        <li>
+          <img src="../src/imagens/Encamp.jpg" alt="" />
+          <p>Encamp</p>
+        </li>
+        <li>
+          <img src="../src/imagens/mirante.jpg" alt="" />
+          <p>Mirantes</p>
+        </li>
+        <li>
+          <img src="../src/imagens/igreja.png" alt="" />
+          <p>Igrejas Românticas</p>
+        </li>
+        <li>
+          <img src="../src/imagens/atividadeNeve.jpg" alt="" />
+          <p>Atividades na Neve</p>
+        </li>
+      </ul>
     </div>
     <footer>
       <img src="../src/imagens/unasp logo.png" alt="" class="logo" />
