--- a/pages/cultura.html
+++ b/pages/cultura.html
@@ -38,30 +38,41 @@
     </header>
     <div class="container">
       <div>
-        <img src="../src/imagens/cultury andorra.jpg" alt="" />
+        <img src="../src/imagens/cultureimg.jpg" alt="" />
         <div class="content">
           <h1>CULTURA</h1>
         </div>
       </div>
       <div class="textContainer">
+        <span>Línguas:</span>
         <p>
-          A cultura de Andorra tem suas raízes na tradição catalã, uma vez que a
-          população do país é de origem catalã. A cultura do Principado de
-          Andorra é moldada por influências provenientes tanto da França quanto
-          da Espanha, embora se destaquem predominantemente as manifestações
-          culturais de origem catalã. Além disso, o calendário festivo do país é
-          caracterizado por celebrações de cunho religioso, principalmente de
-          orientação católica.
-        </p>
-        <p>
-          Uma das celebrações de maior destaque é a Festa Nacional de Andorra,
-          que ocorre em 8 de setembro, no santuário da Virgem de Merixtell,
-          considerada a santa padroeira do país.
-        </p>
-        <p>
-          Quanto à língua oficial de Andorra, o idioma oficial é o catalão. No
-          entanto, o espanhol e o francês também são amplamente falados em todo
-          o território.
+          Andorra tem duas línguas oficiais: o catalão e o francês. O catalão é
+          a língua mais amplamente falada e é usada na maioria das comunicações
+          do governo e da mídia. O francês também é amplamente falado e
+          compreendido, devido à proximidade da França. Religião: A religião
+          predominante em Andorra é o cristianismo, com a Igreja Católica sendo
+          a fé mais comum. Há várias igrejas e capelas católicas romanas no
+          país. Festivais e Tradições: Andorra celebra várias festas e tradições
+          ao longo do ano, muitas delas com raízes religiosas. A Diada de Santa
+          Maria (Festa Nacional) é uma das celebrações mais importantes. Além
+          disso, as festas de Carnaval, Páscoa e Natal também são comemoradas
+          com entusiasmo. Culinária: A gastronomia de Andorra é influenciada
+          pela cozinha catalã e francesa. Pratos tradicionais incluem trinxat
+          (uma espécie de batata amassada com couve e bacon), escudella (um
+          ensopado de carne e vegetais) e caracóis. Além disso, a queijaria e a
+          produção de licores são parte importante da cultura culinária. Arte e
+          Arquitetura: Andorra tem uma cena artística emergente, com galerias de
+          arte e eventos culturais. Além disso, a arquitetura do país é
+          caracterizada por edifícios de estilo montanhês tradicional, com
+          telhados inclinados e pedra como material predominante. Esportes de
+          Inverno: Dada a sua localização nas montanhas, Andorra é um destino
+          popular para esportes de inverno, como esqui e snowboard. Isso também
+          faz parte importante da cultura e economia do país. Compras: Andorra é
+          conhecida por suas lojas duty-free e é um destino popular para compras
+          de produtos eletrônicos, roupas, perfumes e muito mais. Música e
+          Dança: A música e a dança tradicionais de Andorra muitas vezes
+          incorporam elementos dos países vizinhos. A sardana, uma dança catalã,
+          é uma das formas de dança mais conhecidas.
         </p>
       </div>
     </div>
