--- a/pages/historia.html
+++ b/pages/historia.html
@@ -41,11 +41,11 @@
       <h1 class="infoContainer cl">História de Andorra</h1>
       <section class="killxd">
         <h2>
-            A história de Andorra é rica e fascinante, marcada por uma mistura de
-            <br />
-            influências devido à sua localização estratégica nos Pirineus entre a
-            França e a Espanha<span>.</span>
-          </h2>
+          A história de Andorra é rica e fascinante, marcada por uma mistura de
+          <br />
+          influências devido à sua localização estratégica nos Pirineus entre a
+          França e a Espanha<span>.</span>
+        </h2>
         <!--
         <p>
           A história de Andorra, um micro-estado europeu localizado nos
@@ -69,23 +69,58 @@
         </p>
         -->
         <ul class="content">
-            <li>
-                <p><strong>Fundação:</strong> Acredita-se que Andorra tenha sido estabelecida como um território independente no final do século VIII ou início do século IX, durante o governo de Carlos Magno, o imperador franco. Segundo a lenda, Carlos Magno teria concedido o território de Andorra aos habitantes locais como recompensa por sua ajuda na defesa contra os mouros.</p>
-            </li>
-            <li>
-                <p><strong>Domínio Conjunto:</strong> Desde então, Andorra tem sido um co-principado, com dois governantes: o Bispo de Urgel, na Espanha, e o Conde de Foix, na França. Esse sistema de governo conjunto é uma característica única da história de Andorra. No entanto, em 1993, o tratado de Bayonne concedeu poderes ao Bispo de Urgel e ao Presidente da República Francesa sobre questões internas do país.</p>
-            </li>
-            <li>
-                <p><strong>Idade Moderna:</strong> Durante a Idade Moderna, Andorra manteve sua independência, embora tenha enfrentado pressões dos países vizinhos, especialmente durante os períodos de conflito entre França e Espanha.</p>
-            </li>
-            <li>
-                <p><strong>Século XX:</strong> No século XX, Andorra começou a se modernizar e abrir-se ao mundo. Em 1958, uma nova Constituição foi promulgada, estabelecendo o Principado de Andorra como uma democracia parlamentar.</p>
-            </li>
-            <li>
-                <p><strong>Século XXI:</strong> Nos anos 2000, Andorra passou por uma série de reformas legais e financeiras para se tornar mais transparente em questões financeiras e fiscais, atraindo investidores estrangeiros.</p>
-            </li>
+          <li>
+            <p>
+              <strong>Fundação:</strong> Acredita-se que Andorra tenha sido
+              estabelecida como um território independente no final do século
+              VIII ou início do século IX, durante o governo de Carlos Magno, o
+              imperador franco. Segundo a lenda, Carlos Magno teria concedido o
+              território de Andorra aos habitantes locais como recompensa por
+              sua ajuda na defesa contra os mouros.
+            </p>
+          </li>
+          <li>
+            <p>
+              <strong>Domínio Conjunto:</strong> Desde então, Andorra tem sido
+              um co-principado, com dois governantes: o Bispo de Urgel, na
+              Espanha, e o Conde de Foix, na França. Esse sistema de governo
+              conjunto é uma característica única da história de Andorra. No
+              entanto, em 1993, o tratado de Bayonne concedeu poderes ao Bispo
+              de Urgel e ao Presidente da República Francesa sobre questões
+              internas do país.
+            </p>
+          </li>
+          <li>
+            <p>
+              <strong>Idade Moderna:</strong> Durante a Idade Moderna, Andorra
+              manteve sua independência, embora tenha enfrentado pressões dos
+              países vizinhos, especialmente durante os períodos de conflito
+              entre França e Espanha.
+            </p>
+          </li>
+          <li>
+            <p>
+              <strong>Século XX:</strong> No século XX, Andorra começou a se
+              modernizar e abrir-se ao mundo. Em 1958, uma nova Constituição foi
+              promulgada, estabelecendo o Principado de Andorra como uma
+              democracia parlamentar.
+            </p>
+          </li>
+          <li>
+            <p>
+              <strong>Século XXI:</strong> Nos anos 2000, Andorra passou por uma
+              série de reformas legais e financeiras para se tornar mais
+              transparente em questões financeiras e fiscais, atraindo
+              investidores estrangeiros.
+            </p>
+          </li>
         </ul>
-        <p>A história de Andorra é única devido ao seu status de co-principado e sua localização geográfica entre a França e a Espanha. Ela testemunhou transformações significativas ao longo dos séculos, passando de uma sociedade agrícola a uma nação moderna e próspera.</p>
+        <p>
+          A história de Andorra é única devido ao seu status de co-principado e
+          sua localização geográfica entre a França e a Espanha. Ela testemunhou
+          transformações significativas ao longo dos séculos, passando de uma
+          sociedade agrícola a uma nação moderna e próspera.
+        </p>
       </section>
     </main>
     <footer>
