--- a/pages/atracoes.html
+++ b/pages/atracoes.html
@@ -22,7 +22,7 @@
       <nav>
         <ul type="none">
           <li>
-            <a href="../index.html">Andorra XD</a>
+            <a href="../index.html">Andorra</a>
           </li>
           <li>
             <a href="historia.html">História</a>
