--- a/pages/atracoes.html
+++ b/pages/atracoes.html
@@ -45,21 +45,16 @@
         </ul>
       </nav>
     </header>
-    <div class="container">
-      <div class="content">
-        <div class="titulo">
-          <h1>ATRAÇÕES</h1>
-        </div>
-        <div class="containerImg">
-          <div class="nada"></div>
-          <div class="slickImgs">
-            <img src="../src/imagens/La_Vella.jpg" alt="" />
-            <img src="../src/imagens/spar.jpg" alt="" />
-            <img src="../src/imagens/mirante.jpg" alt="" />
-            <img src="../src/imagens/canillo.jpg" alt="" />
-            <img src="../src/imagens/Soldeu.jpg" alt="" />
-          </div>
-        </div>
+    <main class="container">
+      <section class="titulo">
+        <h1>ATRAÇÕES</h1>
+
+      <div class="slickImgs">
+        <img src="../src/imagens/La_Vella.jpg" alt="" />
+        <img src="../src/imagens/spar.jpg" alt="" />
+        <img src="../src/imagens/mirante.jpg" alt="" />
+        <img src="../src/imagens/canillo.jpg" alt="" />
+        <img src="../src/imagens/Soldeu.jpg" alt="" />
       </div>
       <ul type="none" class="galleryContainer">
         <li>
@@ -95,7 +90,7 @@
           <p>Atividades na Neve</p>
         </li>
       </ul>
-    </div>
+    </main>
     <footer>
       <img src="../src/imagens/unasp logo.png" alt="" class="logo" />
       <hr />
