--- a/pages/governo.html
+++ b/pages/governo.html
@@ -1,63 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andorra</title>
-    <link rel="icon" href="../src/imagens/flag.png">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="governo.css">
-</head>
-<body>
+    <link rel="icon" href="../src/imagens/flag.png" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="governo.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul type="none">
-                <li>
-                    <a href="../index.html">Andorra</a>
-                </li>
-                <li>
-                    <a href="historia.html">História</a>
-                </li>
-                <li>
-                    <a href="geografia_montanhas.html">Geografia</a>
-                </li>
-                <li>
-                    <a href="cultura.html">Cultura</a>
-                </li>
-                <li>
-                    <a href="economia.html">Economia</a>
-                </li>
-                <li>
-                    <a href="governo.html">Governo</a>
-                </li>
-                <li>
-                    <a href="atracoes.html">Atrações</a>
-                </li>
-            </ul>
-        </nav>
+      <nav>
+        <ul type="none">
+          <li>
+            <a href="../index.html">Andorra</a>
+          </li>
+          <li>
+            <a href="historia.html">História</a>
+          </li>
+          <li>
+            <a href="geografia_montanhas.html">Geografia</a>
+          </li>
+          <li>
+            <a href="cultura.html">Cultura</a>
+          </li>
+          <li>
+            <a href="economia.html">Economia</a>
+          </li>
+          <li>
+            <a href="governo.html">Governo</a>
+          </li>
+          <li>
+            <a href="atracoes.html">Atrações</a>
+          </li>
+        </ul>
+      </nav>
     </header>
-    <div class="container">
-        <div>
-            <h1>GOVERNO</h1>
-            <hr>
-        </div>
-        <p>
-            Andorra é um co-principado independente desde 1278 e uma democracia parlamentar desde 1993. O poder legislativo é exercido pelo Conselho Geral dos Vales, composto por 28 deputados eleitos para um mandato de quatro anos. Os Chefes de Estado, ou co-príncipes, são o presidente da República Francesa e o bispo da comarca catalã de La Seu d'Urgell. O Chefe de Governo é eleito pela maioria do Conselho Geral dos Vales. Os principais partidos políticos são o PLA (Partido Liberal de Andorra), a AND (Aliança Nacional Democrática) e a IND (Iniciativa Democrática Nacional).
-        </p>
-    </div>
+    <main class="container">
+      <section>
+        <h1>GOVERNO</h1>
+        <img
+          src="../src/imagens/governo.jpg"
+          alt="img ilustrativa de reino"
+          class="slickImgs"
+        />
+      </section>
+      <section class="text">
+      <p>
+        Copríncipes: O Bispo de Urgell, que é um alto representante da Igreja Católica, e o Presidente da França, que é o chefe de estado da França, atuam como copríncipes honorários de Andorra. No entanto, eles não exercem poderes governamentais diretos.
+
+Chefe de Governo: O chefe de governo de Andorra é o chefe executivo do país. O chefe de governo é escolhido pelo Conselho Geral de Andorra, que é o parlamento do país, e é chamado de "Cap de Govern" (Chefe de Governo).
+
+Conselho Geral: O Conselho Geral de Andorra é o órgão legislativo do país. Ele é composto por 28 membros eleitos pelo voto direto da população. Os membros do Conselho Geral são eleitos a cada quatro anos.
+
+Gabinete de Ministros: O Chefe de Governo nomeia ministros que compõem o gabinete de governo. Esses ministros são responsáveis por diferentes áreas da administração pública, como educação, saúde, finanças, etc.
+
+Sistema Legal: Andorra tem um sistema legal baseado no direito civil, influenciado pelas tradições legais espanholas e francesas.
+
+Relações Internacionais: Apesar de ser um país pequeno, Andorra mantém relações diplomáticas com vários outros países e é membro de organizações internacionais, como as Nações Unidas.
+
+Economia: Andorra tem uma economia voltada para o turismo, com um sistema bancário próspero. O governo tem trabalhado para diversificar a economia nas últimas décadas.
+      </p>
+    </section>
     <footer>
-        <img src="./src/imagens/unasp logo.png" alt="" class="logo" />
-        <hr />
-        <div class="fotal">
-          <div class="grp">
-            <h2>Grupo:</h2>
-            <p>David, Eduardo, Everton, Gabriel Estrela e Gabriel Porsi</p>
-          </div>
-          <div class="prof">
-            <h2>Professor Marcio</h2>
-            <p>Trabalho: Criação de um site de Andorra</p>
-          </div>
+      <img src="../src/imagens/unasp logo.png" alt="" class="logo" />
+      <hr />
+      <div class="fotal">
+        <div class="grp">
+          <h2>Grupo:</h2>
+          <p>David, Eduardo, Everton, Gabriel Estrela e Gabriel Porsi</p>
         </div>
+        <div class="prof">
+          <h2>Professor Marcio</h2>
+          <p>Trabalho: Criação de um site de Andorra</p>
+        </div>
+    </main>
     </footer>
-</body>
+  </body>
 </html>
